multi browser and prefix rename ok

--- a/public/css/lib/pikadate/pikadate.css
+++ b/public/css/lib/pikadate/pikadate.css
@@ -35,7 +35,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
    clear: both;
 }
 
-.pika-single {*
+.pika-single {
    zoom:1;
    top: 348px!important;
    right: 18px!important;
@@ -67,7 +67,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-label {
    display: inline-block;
-   *
    display: inline;
    position: relative;
    z-index: 9999;
@@ -109,8 +108,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     background-repeat: no-repeat;
     background-size: 75% 75%;
     opacity: .5;
-    *position: absolute;
-    *top: 0;
+    position: absolute;
+    top: 0;
 }
 
 .pika-prev:hover,
@@ -123,14 +122,14 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 .is-rtl .pika-next {
     float: left;
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAUklEQVR42u3VMQoAIBADQf8Pgj+OD9hG2CtONJB2ymQkKe0HbwAP0xucDiQWARITIDEBEnMgMQ8S8+AqBIl6kKgHiXqQqAeJepBo/z38J/U0uAHlaBkBl9I4GwAAAABJRU5ErkJggg==');
-    *left: 0;
+    left: 0;
 }
 
 .pika-next,
 .is-rtl .pika-prev {
     float: right;
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAU0lEQVR42u3VOwoAMAgE0dwfAnNjU26bYkBCFGwfiL9VVWoO+BJ4Gf3gtsEKKoFBNTCoCAYVwaAiGNQGMUHMkjGbgjk2mIONuXo0nC8XnCf1JXgArVIZAQh5TKYAAAAASUVORK5CYII=');
-    *right: 0;
+    right: 0;
 }
 
 .pika-prev.is-disabled,
@@ -141,7 +140,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-select {
     display: inline-block;
-    *display: inline;
+    display: inline;
 }
 
 .pika-table {
