--- a/public/css/src/dev/dev.css
+++ b/public/css/src/dev/dev.css
@@ -31,42 +31,42 @@
     margin: 4px 0;
 }
 
-.palette__color.--mushia {
+.palette__color.x--mushia {
     background: #db4760
 }
 
-.palette__color.--gentle {
+.palette__color.x--gentle {
     background: #33afff
 }
 
-.palette__color.--royal {
+.palette__color.x--royal {
     background: #1b69ec
 }
 
-.palette__color.--odebo {
+.palette__color.x--odebo {
     background: #fd7124
 }
 
-.palette__color.--blueboy {
+.palette__color.x--blueboy {
     background: #3fb3c6
 }
 
-.palette__color.--pinkirl {
+.palette__color.x--pinkirl {
     background: #d55d8c
 }
 
-.palette__color.--purplepills {
+.palette__color.x--purplepills {
     background: #7b4cbb
 }
 
-.palette__color.--greenected {
+.palette__color.x--greenected {
     background: #6ae74f
 }
 
-.palette__color.--validateen {
+.palette__color.x--validateen {
     background: #6fe27e
 }
 
-.palette__color.--whispereen {
+.palette__color.x--whispereen {
     background: #58c170
 }
