--- a/public/css/src/ioptions/ioptions.css
+++ b/public/css/src/ioptions/ioptions.css
@@ -35,7 +35,7 @@
     background: #F7F7F7;
 }
 
-.ioptions__action.--back {
+.ioptions__action.x--back {
     color: #DB4760;
     color: #1b69ec;
     font-weight: 700;
