--- a/public/css/src/login/login.css
+++ b/public/css/src/login/login.css
@@ -133,7 +133,7 @@
     color: #e6657b;
 }
 
-.init-location.--validating .action__validate {
+.init-location.x--validating .action__validate {
     color: #e88c9c;
 }
 
