--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -1,3 +1,19 @@
+
+.js-no-popup {
+  display: none;
+  opacity: 0.01;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.js-no-popup:hover + button {
+  opacity: .75;
+}
+
 .landing {
     display: flex;
     flex-flow: column nowrap;
@@ -60,6 +76,7 @@
     width: 400px;
     text-align: center;
     margin-bottom: 30px;
+    flex-shrink: 0;
 }
 
 .landing-subtitle h2 {}
@@ -81,7 +98,7 @@
     border: 1px solid rgba(59, 89, 152, 0.41);
 }
 
-.landing__bullet.--active {
+.landing__bullet.x--active {
     background: #3b5998;
 }
 
@@ -127,6 +144,7 @@
     font-size: 9px;
     line-height: 14px;
     color: #919191;
+    flex-shrink: 0;
 }
 
 .landing-privacy h3 {}
@@ -140,18 +158,22 @@
 .landing-neverpublish i {}
 
 .landing-neverpublish span {}
-
+ 
 .landing-connexion {
+    position: relative;
     margin-bottom: 20px;
+    flex-shrink: 0;
+    width: 260px;
+    height: 46px;
 }
 
 .landing-connexion button {
-    width: 260px;
-    height: 46px;
     color: white;
     background: #3b5998;
     border-radius: 5px;
     font-size: 15px;
+    width: 100%;
+    height: 100%;
 }
 
 .landing-bold {
