--- a/public/css/src/search/search_filters.css
+++ b/public/css/src/search/search_filters.css
@@ -18,15 +18,15 @@
     margin: 0 0 20px 0;
 }
 
-.search-filters-section.--gender {
+.search-filters-section.x--gender {
     flex: 1 0 auto;
 }
 
-.search-filters-section.--age {
+.search-filters-section.x--age {
     flex: 1 0 auto;
 }
 
-.search-filters-section.--countries {
+.search-filters-section.x--countries {
     margin-bottom: 0px;
 }
 
@@ -37,7 +37,7 @@
     padding-bottom: 10px;
 }
 
-.search-filters-section.--countries .search-filters-section__title {
+.search-filters-section.x--countries .search-filters-section__title {
     border-bottom: 1px solid #eee;
 }
 
@@ -111,12 +111,12 @@
 
 .search-filters-countries {}
 
-.search-filters-countries.--active .search-filters-country__users-count {
+.search-filters-countries.x--active .search-filters-country__users-count {
     font-weight: bolder;
     color: purple;
 }
 
-.search-filters-countries.--active .search-filters-country__label {
+.search-filters-countries.x--active .search-filters-country__label {
     font-weight: bold;
     color: #454545;
 }
