--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -1,11 +1,11 @@
-.menu-section.--settings {}
+.menu-section.x--settings {}
 
-.menu-section.--settings .segment {
+.menu-section.x--settings .segment {
     margin-bottom: 40px;
     width: 90%;
 }
 
-.menu-section.--settings .segment__part {
+.menu-section.x--settings .segment__part {
     font-size: 12px;
 }
 
@@ -16,13 +16,13 @@
     display: none;
 }
 
-.settings.--account {}
+.settings.x--account {}
 
-.settings.--code {}
+.settings.x--code {}
 
-.settings.--notifications {}
+.settings.x--notifications {}
 
-.settings.--ux {}
+.settings.x--ux {}
 
 .settings__title {
     /* text-transform: uppercase; */
@@ -43,7 +43,7 @@
     border-bottom: 1px solid #eee;
 }
 
-.settings-item.--no-border {
+.settings-item.x--no-border {
     border-bottom: none;
     margin: 20px 0;
     padding: 0;
@@ -57,7 +57,7 @@
     z-index: 1;
 }
 
-.settings.--code button {
+.settings.x--code button {
     background: #7b4cbb;
     padding: 18px 100px;
     color: white;
@@ -67,8 +67,8 @@
     border-radius: 4px;
 }
 
-.settings button.--delete,
-.settings button.--changelang {
+.settings button.x--delete,
+.settings button.x--changelang {
     background: #FFFFFF;
     padding: 10px 50px;
     color: #1b69ec;
@@ -80,7 +80,7 @@
     margin-right: 0;
 }
 
-.settings button.--changelang {
+.settings button.x--changelang {
     color: white;
     border: 1px solid;
     background: #1b69ec;
@@ -98,14 +98,14 @@
     transition: all ease-out .15s;
 }
 
-.settings-item.--active {}
+.settings-item.x--active {}
 
-.settings-item.--active input {
+.settings-item.x--active input {
     border-bottom: 1px solid #1B69EC;
     padding-left: 15px;
 }
 
-.modal.--sponsorship button {
+.modal.x--sponsorship button {
     background: #7b4cbb;
     color: white;
     width: 180px;
@@ -154,19 +154,19 @@
     position: absolute;
 }
 
-.menu-section-submenu__item.--active {
+.menu-section-submenu__item.x--active {
     color: #1B69EC;
 }
 
-.menu-section-submenu__item.--active .menu-section-submenu__bar {
+.menu-section-submenu__item.x--active .menu-section-submenu__bar {
     display: block;
 }
 
 @media (max-width: 1000px) {
-    .menu-section.--settings .segment__part {
+    .menu-section.x--settings .segment__part {
         overflow: hidden;
     }
-    .menu-section.--settings .segment__part h4 {
+    .menu-section.x--settings .segment__part h4 {
         width: 200px;
         padding: 0 13px;
         text-align: center;
